Fix the problem that error message may be hidden by other element

--- a/css/_datepicker.scss
+++ b/css/_datepicker.scss
@@ -156,6 +156,7 @@
 
 .error-msg-container {
 	display: none;
+	z-index: 999;
 	margin-top: 5px;
 	@extend .material-depth-2;
 	background: $red-600;
